--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-group-middleware",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Express.js group middleware",
   "main": "index.js",
   "scripts": {
@@ -19,5 +19,8 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/DavidKlassen/express-group-middleware/issues"
+  },
+  "devDependencies": {
+    "express": "~3.4.0"
   }
 }
